mesa: Replace MESA_VERSION with PACKAGE_VERSION.
One fewer place to have to update.

Reviewed-by: Eric Anholt <eric@anholt.net>

--- a/src/gallium/state_trackers/vega/Makefile.am
+++ b/src/gallium/state_trackers/vega/Makefile.am
@@ -25,8 +25,7 @@ include $(top_srcdir)/src/gallium/Automake.inc
 AM_CFLAGS = $(GALLIUM_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/src/mapi \
-	-DVEGA_VERSION_STRING=\"$(MESA_VERSION)\"
+	-I$(top_srcdir)/src/mapi
 
 noinst_LTLIBRARIES = libvega.la
 
