--- a/src/gallium/state_trackers/vega/SConscript
+++ b/src/gallium/state_trackers/vega/SConscript
@@ -12,7 +12,7 @@ env.Append(CPPPATH = [
     Dir('.'),
 ])
 env.Append(CPPDEFINES = [
-    'VEGA_VERSION_STRING=',
+    'PACKAGE_VERSION='
     'KHRONOS_DLL_EXPORTS',
 ])
 
