radeon/llvm: fix LLVM dependencies
Since commit 1c4f283151b191c51cbd76d7f304cc1fe7be3019 we obvious depend on this.

Signed-off-by: Christian König <christian.koenig@amd.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1772,7 +1772,7 @@ radeon_llvm_check() {
                       configure flag])
     fi
     AC_MSG_WARN([Please ensure you use the latest llvm tree from git://people.freedesktop.org/~tstellar/llvm master before submitting a bug])
-    LLVM_COMPONENTS="${LLVM_COMPONENTS} r600"
+    LLVM_COMPONENTS="${LLVM_COMPONENTS} r600 bitreader"
 }
 
 dnl Gallium drivers
