radeon/llvm: Use LLVM C API for compiling LLVM IR to ISA v2
The LLVM C API is considered stable and should never change, so it
is much more desirable to use than the LLVM C++ API, which is constantly in
flux.

v2:
  - Split target initialization and lookup into separate functions

Reviewed-by: Mathias.Froehlich@web.de

--- a/src/gallium/drivers/radeon/Makefile.sources
+++ b/src/gallium/drivers/radeon/Makefile.sources
@@ -1,9 +1,7 @@
 C_SOURCES := \
 	radeon_uvd.c
 
-LLVM_CPP_FILES := \
-	radeon_llvm_emit.cpp
-
 LLVM_C_FILES := \
 	radeon_setup_tgsi_llvm.c \
+	radeon_llvm_emit.c \
 	radeon_llvm_util.c
