clover: Define platform class and merge with device_registry.
Null platform IDs are OK according to the spec, but some applications have
been reported to get paranoid and assume that our NULL platform is unusable.

As it doesn't hurt to have device enumeration separate from the rest of the
device code (quite the opposite, it makes the code cleaner), make the API use
an actual platform object that keeps track of the available devices instead of
the former NULL pointer.

Reported-and-reviewed-by: Tom Stellard <thomas.stellard@amd.com>
Signed-off-by: Francisco Jerez <currojerez@riseup.net>

--- a/src/gallium/state_trackers/clover/Makefile.am
+++ b/src/gallium/state_trackers/clover/Makefile.am
@@ -50,6 +50,8 @@ libclover_la_SOURCES = \
 	core/format.cpp \
 	core/memory.hpp \
 	core/memory.cpp \
+	core/platform.hpp \
+	core/platform.cpp \
 	core/resource.hpp \
 	core/resource.cpp \
 	core/sampler.hpp \
