--- a/src/mesa/SConscript
+++ b/src/mesa/SConscript
@@ -263,6 +263,7 @@ statetracker_sources = [
     'state_tracker/st_cb_eglimage.c',
     'state_tracker/st_cb_fbo.c',
     'state_tracker/st_cb_feedback.c',
+    'state_tracker/st_cb_msaa.c',
     'state_tracker/st_cb_program.c',
     'state_tracker/st_cb_queryobj.c',
     'state_tracker/st_cb_rasterpos.c',
