mesa: generate glGetInteger/Boolean/Float/Doublev() code for all APIs
No longer pass -a flag to the get_hash_generate.py script to specify
OpenGL, ES1, ES2, etc.  This updates the autoconf, scons and android
build files too (so we can bisect).

This is the last of the API-dependent conditional compilation in
core Mesa.

Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/mesa/Makefile.am
+++ b/src/mesa/Makefile.am
@@ -71,14 +71,12 @@ CLEANFILES = \
 	git_sha1.h.tmp
 
 GET_HASH_GEN = main/get_hash_generator.py
-GET_HASH_GEN_FLAGS := $(patsubst -DFEATURE_%=1,-a %, \
-			$(patsubst -DFEATURE_%=0,,$(API_DEFINES)))
 
 main/get_hash.h: $(GLAPI)/gl_and_es_API.xml main/get_hash_params.py 	\
 		 $(GET_HASH_GEN) Makefile
 	$(AM_V_GEN)set -e;						\
-	$(PYTHON2) $(PYTHON_FLAGS) $(srcdir)/$(GET_HASH_GEN) 		\
-		$(GET_HASH_GEN_FLAGS) -f $< > $@.tmp;			\
+	$(PYTHON2) $(PYTHON_FLAGS) $(srcdir)/$(GET_HASH_GEN)		\
+		-f $< > $@.tmp;						\
 	mv $@.tmp $@;
 
 noinst_LTLIBRARIES =
