--- a/configure.ac
+++ b/configure.ac
@@ -1317,22 +1317,7 @@ AM_CONDITIONAL(HAVE_OPENVG, test "x$enable_openvg" = xyes)
 dnl
 dnl Gallium G3DVL configuration
 dnl
-AC_ARG_ENABLE([gallium-g3dvl],
-    [AS_HELP_STRING([--disable-gallium-g3dvl],
-        [build gallium g3dvl @<:@default=auto@:>@])],
-    [enable_gallium_g3dvl="$enableval"],
-    [enable_gallium_g3dvl=auto])
-if test "x$enable_gallium_g3dvl" = xauto; then
-    if test "x$with_gallium_drivers" != x; then
-        enable_gallium_g3dvl=yes
-    fi
-fi
-
-if test "x$enable_gallium_g3dvl" = xyes; then
-    if test "x$with_gallium_drivers" = x; then
-        AC_MSG_ERROR([cannot enable G3DVL without Gallium])
-    fi
-
+if test -n "$with_gallium_drivers"; then
     if test "x$enable_xvmc" = xauto; then
 	PKG_CHECK_EXISTS([xvmc], [enable_xvmc=yes], [enable_xvmc=no])
     fi
