radeon/llvm: Always build libradeonllvm as static
This library is very small, so there is not much to gain from building
it as a shared library.  Also, when linking statically with LLVM, a
shared libradeonllvm exports LLVM symbols and creates problems when
used with other shared objects that also link statically to LLVM.

Reviewed-by: Mathias.Froehlich@web.de

--- a/src/gallium/drivers/r600/Makefile.am
+++ b/src/gallium/drivers/r600/Makefile.am
@@ -29,7 +29,7 @@ if R600_NEED_RADEON_GALLIUM
 libr600_la_SOURCES += \
 	$(LLVM_C_SOURCES)
 
-libr600_la_LIBADD += ../radeon/libllvmradeon@VERSION@.la
+libr600_la_LIBADD += ../radeon/libllvmradeon.la
 
 AM_CFLAGS += \
 	$(LLVM_CFLAGS) \
