--- a/src/gallium/drivers/radeonsi/Makefile.am
+++ b/src/gallium/drivers/radeonsi/Makefile.am
@@ -35,4 +35,4 @@ AM_CFLAGS = $(LLVM_CFLAGS)
 libradeonsi_la_SOURCES = $(C_SOURCES)
 libradeonsi_la_LIBADD = \
 	../radeon/libradeon.la \
-	../radeon/libllvmradeon@VERSION@.la
+	../radeon/libllvmradeon.la
