--- a/src/gallium/drivers/radeon/Makefile.am
+++ b/src/gallium/drivers/radeon/Makefile.am
@@ -12,31 +12,24 @@ libradeon_la_SOURCES = \
 
 if NEED_RADEON_LLVM
 
-if HAVE_GALLIUM_R600
-if HAVE_GALLIUM_RADEONSI
-lib_LTLIBRARIES = libllvmradeon@VERSION@.la
-libllvmradeon@VERSION@_la_LDFLAGS = -Wl, -shared -avoid-version \
+libllvmradeon_la_LDFLAGS = \
 	$(LLVM_LDFLAGS)
-LIBGALLIUM_LIBS += $(top_builddir)/src/gallium/auxiliary/libgallium.la
-else
-noinst_LTLIBRARIES += libllvmradeon@VERSION@.la
-endif
-else
-noinst_LTLIBRARIES += libllvmradeon@VERSION@.la
-endif
 
-libllvmradeon@VERSION@_la_CXXFLAGS = \
+noinst_LTLIBRARIES += libllvmradeon.la
+
+libllvmradeon_la_CXXFLAGS = \
 	$(GALLIUM_CFLAGS) \
 	$(DEFINES)
 
-libllvmradeon@VERSION@_la_CFLAGS = \
+libllvmradeon_la_CFLAGS = \
 	$(GALLIUM_CFLAGS) \
 	$(LLVM_CFLAGS)
 
-libllvmradeon@VERSION@_la_SOURCES = \
+libllvmradeon_la_SOURCES = \
+	$(LLVM_CPP_FILES) \
 	$(LLVM_C_FILES)
 
-libllvmradeon@VERSION@_la_LIBADD = \
+libllvmradeon_la_LIBADD = \
 	$(LIBGALLIUM_LIBS) \
 	$(CLOCK_LIB) \
 	$(LLVM_LIBS) \
