--- a/src/mapi/glapi/SConscript
+++ b/src/mapi/glapi/SConscript
@@ -49,7 +49,8 @@ for s in mapi_sources:
 #
 # Assembly sources
 #
-if env['gcc'] and env['platform'] not in ('cygwin', 'darwin', 'windows'):
+if (env['gcc'] or env['clang']) and \
+   env['platform'] not in ('cygwin', 'darwin', 'windows'):
     GLAPI = '#src/mapi/glapi/'
 
     if env['machine'] == 'x86':
