--- a/src/gallium/drivers/r600/Makefile.sources
+++ b/src/gallium/drivers/r600/Makefile.sources
@@ -19,4 +19,32 @@ C_SOURCES = \
 	compute_memory_pool.c \
 	r600_uvd.c
 
+CXX_SOURCES = \
+	sb/sb_bc_builder.cpp \
+	sb/sb_bc_decoder.cpp \
+	sb/sb_bc_dump.cpp \
+	sb/sb_bc_finalize.cpp \
+	sb/sb_bc_parser.cpp \
+	sb/sb_context.cpp \
+	sb/sb_core.cpp \
+	sb/sb_dce_cleanup.cpp \
+	sb/sb_def_use.cpp \
+	sb/sb_dump.cpp \
+	sb/sb_expr.cpp \
+	sb/sb_gcm.cpp \
+	sb/sb_gvn.cpp \
+	sb/sb_if_conversion.cpp \
+	sb/sb_ir.cpp \
+	sb/sb_liveness.cpp \
+	sb/sb_pass.cpp \
+	sb/sb_peephole.cpp \
+	sb/sb_psi_ops.cpp \
+	sb/sb_ra_checker.cpp \
+	sb/sb_ra_coalesce.cpp \
+	sb/sb_ra_init.cpp \
+	sb/sb_sched.cpp \
+	sb/sb_shader.cpp \
+	sb/sb_ssa_builder.cpp \
+	sb/sb_valtable.cpp
+
 LLVM_C_SOURCES = r600_llvm.c
