ilo: move transfer-related functions to a new file
Resource mapping is distinct from resource allocation, and is going to get
more and more complex.  Move the related functions to a new file to make the
separation clear.

--- a/src/gallium/drivers/ilo/Makefile.sources
+++ b/src/gallium/drivers/ilo/Makefile.sources
@@ -16,6 +16,7 @@ C_SOURCES := \
 	ilo_screen.c \
 	ilo_shader.c \
 	ilo_state.c \
+	ilo_transfer.c \
 	ilo_video.c \
 	shader/ilo_shader_cs.c \
 	shader/ilo_shader_fs.c \
