Haiku: Add Gallium winsys and target code
* We generate a static library for Haiku
  Gallium targets as our port system combines
  the compiled rendering code into a modular
  ar for each module (for example, our port
  system combines llvm libsoftpipe.a libllvmpipe.a
  into a single ar for the Haiku build system.
  I'd like the Gallium hgl target scons build
  system to do this some day, however how is
  beyond me at the moment. This is a first step.

--- a/src/gallium/SConscript
+++ b/src/gallium/SConscript
@@ -74,6 +74,11 @@ if not env['msvc']:
         'winsys/i915/sw/SConscript',
     ])
 
+if env['platform'] == 'haiku':
+    SConscript([
+        'winsys/sw/hgl/SConscript',
+    ])
+
 if env['dri']:
     SConscript([
         'winsys/sw/dri/SConscript',
@@ -112,6 +117,11 @@ if not env['embedded']:
         SConscript([
             'targets/graw-gdi/SConscript',
             'targets/libgl-gdi/SConscript',
+        ])
+
+    if env['platform'] == 'haiku':
+        SConscript([
+            'targets/haiku-softpipe/SConscript',
         ])
 
     if env['dri']:
