--- a/src/gallium/drivers/freedreno/Makefile.am
+++ b/src/gallium/drivers/freedreno/Makefile.am
@@ -5,12 +5,13 @@ noinst_LTLIBRARIES = libfreedreno.la
 AM_CFLAGS = \
 	-Wno-packed-bitfield-compat \
 	-I$(top_srcdir)/src/gallium/drivers \
+	-I$(top_srcdir)/src/gallium/drivers/freedreno/a3xx \
 	-I$(top_srcdir)/src/gallium/drivers/freedreno/a2xx \
 	$(GALLIUM_CFLAGS) \
 	$(FREEDRENO_CFLAGS) \
 	$(VISIBILITY_CFLAGS)
 
-SUBDIRS = a2xx
+SUBDIRS = a2xx a3xx
 
 libfreedreno_la_SOURCES = \
 	freedreno_util.c \
@@ -25,5 +26,6 @@ libfreedreno_la_SOURCES = \
 	freedreno_gmem.c
 
 libfreedreno_la_LIBADD = \
+	a3xx/libfd3xx.la \
 	a2xx/libfd2xx.la
 
