--- a/src/gallium/drivers/ilo/Makefile.sources
+++ b/src/gallium/drivers/ilo/Makefile.sources
@@ -5,6 +5,8 @@ C_SOURCES := \
 	ilo_3d_pipeline_gen6.c \
 	ilo_3d_pipeline_gen7.c \
 	ilo_blit.c \
+	ilo_blitter.c \
+	ilo_blitter_pipe.c \
 	ilo_context.c \
 	ilo_cp.c \
 	ilo_format.c \
